--- a/functions-level-3_1/index.html
+++ b/functions-level-3_1/index.html
@@ -11,11 +11,17 @@
 <body>
     <h1 class="headline">CHANGE BACKGROUND & TEXT COLOR</h1>
     <div class="all-balls">
+        <div class="balls" id="ball1" onclick="changeColor('rgb(121,9,106)', 'rgb(50,156,94)')"></div>
+        <div class="balls" id="ball2" onclick="changeColor('rgb(222,183,76)', 'rgb(79,76,124)')"></div>
+        <div class="balls" id="ball3" onclick="changeColor('rgb(207,107,13)', 'rgb(14,14,14)')"></div>
+        <div class="balls" id="ball4" onclick="changeColor('rgb(67,212,255)', 'rgb(7,6,104)')"></div>
+    </div>
+    <!-- <div class="all-balls">
         <div class="balls" id="ball1" onclick="changeColor1()"></div>
         <div class="balls" id="ball2" onclick="changeColor2()"></div>
         <div class="balls" id="ball3" onclick="changeColor3()"></div>
         <div class="balls" id="ball4" onclick="changeColor4()"></div>
-    </div>
+    </div> -->
 
     <script src="./assets/js/main.js"></script>
 </body>
