Korrektur forms + js 1_3 – Math.abs eingesetzt

--- a/forms+js_function-compare-age-level_1_3/index.html
+++ b/forms+js_function-compare-age-level_1_3/index.html
@@ -11,9 +11,9 @@
 <body>
     <form onsubmit="return false">
         <label for="age1">Alter 1</label>
-        <input type="number" name="age1" id="age1" placeholder="50">
+        <input type="number" name="age1" id="age1" placeholder="50" required>
         <label for="age1">Alter 2</label>
-        <input type="number" name="age2" id="age2" placeholder="50">
+        <input type="number" name="age2" id="age2" placeholder="50" required>
         <button type="button" onclick="differenceAge()">Berechne</button>
     </form>
     <div id="output"></div>
